--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-  listen       80;
-  root   /usr/share/nginx/html;
+  listen 80;
+  root /usr/share/nginx/html;
   server_tokens off;
   charset utf-8;
 
@@ -8,7 +8,7 @@ server {
     index  index.html index.htm;
 
     if ($http_x_forwarded_proto != "https") {
-      rewrite ^(.*)$ https://$server_name$1 permanent;
+      rewrite ^(.*)$ https://$host$1 permanent;
     }
 
     expires 1h;
