--- a/nginx.conf
+++ b/nginx.conf
@@ -7,14 +7,14 @@ server {
   location / {
     index  index.html index.htm;
 
-    if ($http_x_forwarded_proto != "https") {
-      rewrite ^(.*)$ https://$host$1 permanent;
-    }
+    #if ($http_x_forwarded_proto != "https") {
+    #  rewrite ^(.*)$ https://$host$1 permanent;
+    #}
 
     expires 1h;
 
     add_header Cache-Control "public";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
+    add_header Strict-Transport-Security "max-age=31536000;";
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
