--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,12 @@ server {
   server_tokens off;
   charset utf-8;
 
+  if ($http_x_forwarded_proto = "http") {
+    return 301 https://$host$request_uri;
+  }
+
   location / {
     index  index.html index.htm;
-
-    #if ($http_x_forwarded_proto != "https") {
-    #  rewrite ^(.*)$ https://$host$1 permanent;
-    #}
 
     expires 1h;
 
