--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "natwelch.com",
   "version": "2.0.0",
   "description": "Nat's personal site.",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/icco/natwelch.com.git"
@@ -14,6 +13,9 @@
   },
   "homepage": "https://natwelch.com",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "next": "^8.0.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   }
 }
