--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "next": "^8.0.3",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "react-moment": "^0.8.4"
   },
   "devDependencies": {
     "prettier": "^1.16.1"
