--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Nat's personal site.",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
