--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "express": "^4.16.4",
+    "luxon": "^1.12.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
     "react": "^16.8.3",
