--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   "homepage": "https://natwelch.com",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.3.1",
     "express": "^4.16.4",
+    "graphql": "^14.2.0",
     "luxon": "^1.12.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
+    "node-fetch": "^2.3.0",
     "react": "^16.8.3",
+    "react-apollo": "^2.5.3",
     "react-dom": "^16.8.3",
     "react-moment": "^0.8.4",
     "react-p5-wrapper": "^0.0.4",
