--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
   "homepage": "https://natwelch.com",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "apollo-boost": "^0.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-http": "^1.5.14",
+    "babel-plugin-transform-define": "^1.3.1",
     "express": "^4.16.4",
     "graphql": "^14.2.0",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-unfetch": "^3.0.0",
     "luxon": "^1.12.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
-    "node-fetch": "^2.3.0",
     "react": "^16.8.3",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.3",
