--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.8.3",
     "react-moment": "^0.8.4",
     "react-p5-wrapper": "^0.0.4",
+    "svg.js": "^2.7.1",
     "webpack": "^4.29.6"
   },
   "devDependencies": {
