--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Nat Welch <nat@natwelch.com>",
   "homepage": "https://natwelch.com",
   "dependencies": {
+    "@svgdotjs/svg.topath.js": "^2.0.3",
     "@zeit/next-css": "^1.0.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
@@ -27,12 +28,15 @@
     "luxon": "^1.12.0",
     "moment": "^2.24.0",
     "next": "^8.0.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.3",
     "react-moment": "^0.8.4",
     "react-p5-wrapper": "^0.0.4",
     "svg.js": "^2.7.1",
+    "svg.pathmorphing.js": "^0.1.3",
+    "vivus": "^0.4.4",
     "webpack": "^4.29.6"
   },
   "devDependencies": {
