--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://natwelch.com",
   "dependencies": {
     "@svgdotjs/svg.topath.js": "^2.0.3",
+    "@svgdotjs/svg.js": "^3.0.1",
     "@zeit/next-css": "^1.0.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
@@ -34,8 +35,6 @@
     "react-dom": "^16.8.3",
     "react-moment": "^0.8.4",
     "react-p5-wrapper": "^0.0.4",
-    "svg.js": "^2.7.1",
-    "svg.pathmorphing.js": "^0.1.3",
     "vivus": "^0.4.4",
     "webpack": "^4.29.6"
   },
