--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "react-apollo": "^2.5.3",
     "react-dom": "^16.12.0",
     "react-moment": "^0.8.4",
-    "webpack": "^4.29.6",
-    "snyk": "^1.320.5"
+    "snyk": "^1.320.5",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "prettier": "^2"
