--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "react-apollo": "^2.5.3",
     "react-dom": "^17.0.0",
     "react-moment": "^1.0.0",
-    "webpack": "^5.6.0",
-    "snyk": "^1.430.0"
+    "snyk": "^1.430.0",
+    "webpack": "^5.6.0"
   },
   "devDependencies": {
     "prettier": "^2.2.0"
