--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next -p $PORT",
+    "start": "next start -p $PORT",
     "snyk-protect": "snyk protect",
     "prepare": "yarn run snyk-protect"
   },
