--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@icco/react-common": "^2020.11.4-1",
     "isomorphic-unfetch": "^3.0.0",
-    "luxon": "^1.25.0",
+    "luxon": "^2.0.0",
     "moment": "^2.24.0",
     "next": "^11.0.0",
     "next-secure-headers": "^2.1.0",
@@ -32,6 +32,7 @@
     "webpack": "^5.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "prettier": "^2.2.0"
   },
   "prettier": {
