--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.8",
     "prettier": "^2.2.0"
   },
   "prettier": {
