--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next lint --fix && next dev -p 8080",
+    "lint": "next lint",
     "build": "next build",
     "start": "next start -p $PORT"
   },
@@ -25,16 +26,28 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-moment": "^1.0.0",
-    "webpack": "^5.6.0"
+    "react-moment": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
-    "prettier": "^2.2.0"
+    "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^12.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-mdx": "^1.16.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "get-graphql-schema": "^2.1.2",
+    "prettier": "^2.3.2",
+    "typescript": "^4.5.4",
+    "webpack": "^5.10.0"
   },
   "prettier": {
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false
   }
 }
