--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "next lint --fix && next dev -p 8080",
     "lint": "next lint",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start -p $PORT"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "moment": "^2.24.0",
     "next": "^12.0.0",
     "next-secure-headers": "^2.1.0",
+    "next-sitemap": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
