--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "luxon": "^2.0.0",
     "moment": "^2.24.0",
     "next": "^12.0.0",
+    "next-mdx-remote": "^3.0.8",
     "next-secure-headers": "^2.1.0",
     "next-sitemap": "^2.0.2",
     "prop-types": "^15.7.2",
