--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://natwelch.com",
   "dependencies": {
     "@icco/react-common": ">= 2022.1.18-3",
+    "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
-    "luxon": "^2.0.0",
+    "luxon": "^2.3.0",
     "moment": "^2.24.0",
     "next": "^12.0.0",
     "next-mdx-remote": "^3.0.8",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/luxon": "^2.0.9",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
