--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.6.0",
     "@icco/react-common": ">= 2022.1.18-3",
     "@mdx-js/react": "^1.6.22",
+    "@root/walk": "^1.1.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
     "luxon": "^2.3.0",
