--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@root/walk": "^1.1.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "next": "^12.0.0",
     "next-mdx-remote": "^3.0.8",
