--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "rehype-slug": "^5.0.1",
+    "remark-definition-list": "^1.0.0",
     "remark-gfm": "^3.0.1",
     "theme-ui": "^0.13.1",
     "typography": "^0.16.21",
