--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/lodash": "^4.14.178",
     "@types/luxon": "^2.0.9",
     "@types/react": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
