--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Nat Welch <nat@natwelch.com>",
   "homepage": "https://natwelch.com",
   "dependencies": {
+    "@atlaskit/table-tree": "^9.1.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@icco/react-common": "^2022.1.28-2",
