--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@mdx-js/react": "^1.6.22",
     "@root/walk": "^1.1.0",
     "@theme-ui/typography": "^0.13.1",
+    "graphql": "^16.3.0",
     "gray-matter": "^4.0.3",
-    "isomorphic-unfetch": "^3.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
     "next": "^12.0.0",
@@ -40,7 +41,8 @@
     "remark-gfm": "^3.0.1",
     "theme-ui": "^0.13.1",
     "typography": "^0.16.21",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "urql": "^2.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
