--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "rehype-slug": "^5.0.1",
     "remark-definition-list": "^1.0.0",
     "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
     "theme-ui": "^0.13.1",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
+    "unified": "^10.1.1",
     "urql": "^2.1.3"
   },
   "devDependencies": {
