--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "get-graphql-schema": "^2.1.2",
     "prettier": "^2.3.2",
-    "typescript": "^4.5.4",
+    "typescript": ">=3.3.1 <4.9.0",
     "webpack": "^5.10.0"
   },
   "prettier": {
