--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@icco/react-common": "^2022.11.16-2",
+    "@icco/react-common": "^2022.12.27-1",
     "@mdx-js/react": "^2.1.5",
     "@root/walk": "^1.1.0",
     "@theme-ui/typography": "^0.15.4",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.3",
-    "isomorphic-unfetch": "^3.1.0",
+    "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.0.0",
     "next": "^13.0.0",
@@ -61,7 +61,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "get-graphql-schema": "^2.1.2",
     "prettier": "^2.3.2",
-    "typescript": ">=3.3.1 <4.9.0",
+    "typescript": "^4.0.0",
     "webpack": "^5.10.0"
   },
   "prettier": {
