--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/react": "^2.1.5",
     "@root/walk": "^1.1.0",
     "@theme-ui/typography": "^0.15.4",
+    "@urql/exchange-persisted": "^3.0.0",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
