--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@icco/react-common": "^2023.3.18-2",
-    "@mdx-js/react": "^2.1.5",
+    "@mdx-js/react": "^2.3.0",
     "@root/walk": "^1.1.0",
+    "@theme-ui/mdx": "^0.15.7",
     "@theme-ui/typography": "^0.15.4",
     "@urql/exchange-persisted": "^3.0.0",
     "graphql": "^16.3.0",
