--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.6.0",
     "@icco/react-common": "^2023.3.18-2",
     "@mdx-js/react": "^2.3.0",
+    "@next/env": "^13.4.5",
     "@root/walk": "^1.1.0",
     "@theme-ui/mdx": "^0.15.7",
     "@theme-ui/typography": "^0.15.4",
@@ -52,6 +53,7 @@
     "@babel/core": "^7.0.0",
     "@types/lodash": "^4.14.178",
     "@types/luxon": "^3.0.0",
+    "@types/mdx": "^2.0.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
