--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "get-graphql-schema": "^2.1.2",
     "prettier": "^2.3.2",
-    "typescript": "^5.0.0",
+    "typescript": ">=3.3.1 <5.1.0",
     "webpack": "^5.10.0"
   },
   "resolutions": {},
