--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@theme-ui/mdx": "^0.15.7",
     "@theme-ui/typography": "^0.15.4",
     "@urql/exchange-persisted": "^4.0.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "graphql": "^16.3.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.0.0",
     "next": "^13.5.4",
+    "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^4.0.0",
     "next-secure-headers": "^2.1.0",
     "next-sitemap": "^4.0.0",
