--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@theme-ui/mdx": "^0.15.7",
     "@theme-ui/typography": "^0.15.4",
     "@urql/exchange-persisted": "^4.0.0",
+    "@urql/next": "^1.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
-    "graphql": "^16.3.0",
+    "graphql": "^16.8.1",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
@@ -50,7 +51,7 @@
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
     "unified": "^10.1.1",
-    "urql": "^4.0.0"
+    "urql": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
