--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@mdx-js/react": "^2.3.0",
     "@next/env": "^13.4.5",
     "@root/walk": "^1.1.0",
-    "@theme-ui/mdx": "^0.15.7",
-    "@theme-ui/typography": "^0.15.4",
+    "@theme-ui/mdx": "^0.16.0",
+    "@theme-ui/typography": "^0.16.0",
     "@urql/exchange-persisted": "^4.0.0",
     "@urql/next": "^1.0.0",
     "contentlayer": "^0.3.4",
@@ -42,14 +42,14 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rehype-slug": "^5.0.1",
+    "rehype-slug": "^6.0.0",
     "remark-definition-list": "^1.0.0",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
-    "theme-ui": "^0.15.0",
+    "theme-ui": "^0.16.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
-    "unified": "^10.1.1",
+    "unified": "^11.0.0",
     "urql": "^4.0.5"
   },
   "devDependencies": {
@@ -59,17 +59,17 @@
     "@types/mdx": "^2.0.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.5.4",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-mdx": "^2.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "get-graphql-schema": "^2.1.2",
-    "prettier": "^2.3.2",
-    "typescript": ">=3.3.1 <5.1.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.2.2",
     "webpack": "^5.10.0"
   },
   "resolutions": {},
