--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,31 @@
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
     "simple-import-sort/exports": "error",
-    "simple-import-sort/imports": "error"
+    "simple-import-sort/imports": [
+      "error",
+      {
+        "groups": [
+          [
+            "^\\u0000"
+          ],
+          [
+            "^(assert|buffer|child_process|cluster|console|constants|crypto|dgram|dns|domain|events|fs|http|https|module|net|os|path|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|vm|zlib|freelist|v8|process|async_hooks|http2|perf_hooks)(/.*|$)"
+          ],
+          [
+            "^@?\\w"
+          ],
+          [
+            "^"
+          ],
+          [
+            "^components(/.*|$)', '^lib(/.*|$)"
+          ],
+          [
+            "^\\."
+          ]
+        ]
+      }
+    ]
   },
   "extends": [
     "eslint:recommended",
