--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
@@ -59,7 +60,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "get-graphql-schema": "^2.1.2",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "webpack": "^5.10.0"
   },
