--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
     "@types/luxon": "^3.0.0",
     "@types/mdx": "^2.0.2",
