--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "remark-definition-list": "^1.0.0",
     "remark-gfm": "^3.0.0",
     "unified": "^11.0.0",
-    "urql": "^4.0.5"
+    "urql": "^4.0.5",
+    "vivus": "^0.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
