--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^1.0.0",
     "remark-gfm": "^3.0.0",
+    "rss-parser": "^3.13.0",
     "unified": "^11.0.0",
     "urql": "^4.0.5",
     "vivus": "^0.4.6"
