--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@urql/exchange-persisted": "^4.0.0",
     "@urql/next": "^1.0.0",
     "contentlayer": "^0.3.4",
-    "date-fns": "^3.0.0",
-    "date-fns-tz": "^2.0.0",
+    "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.0",
     "next": "^14.0.0",
     "next-contentlayer": "^0.3.4",
     "next-secure-headers": "^2.1.0",
@@ -49,6 +49,7 @@
     "@babel/core": "^7.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
+    "@types/luxon": "^3.0.0",
     "@types/mdx": "^2.0.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.0.4",
