--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,8 @@
 name: Create and publish Docker image
 on:
   push:
-    branches: ['release']
+    branches:
+      - release
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
