--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/eslint__js": "^8.42.3",
     "@types/lodash": "^4.14.178",
     "@types/luxon": "^3.0.0",
     "@types/mdx": "^2.0.2",
@@ -56,7 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.0.0",
+    "eslint": "^9.9.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-mdx": "^3.0.0",
@@ -66,7 +68,8 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
     "webpack": "^5.10.0"
   },
   "resolutions": {},
