--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "Nat Welch <nat@natwelch.com>",
   "homepage": "https://natwelch.com",
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@mdx-js/react": "^3.0.0",
     "@next/env": "^14.0.0",
     "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
+    "daisyui": "^4.7.3",
     "date-fns": "^3.0.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
