--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Nat Welch <nat@natwelch.com>",
   "homepage": "https://natwelch.com",
   "dependencies": {
+    "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
     "@mdx-js/react": "^3.0.0",
     "@next/env": "^14.0.0",
@@ -28,7 +29,6 @@
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.0.0",
     "next": "^14.0.0",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
@@ -48,7 +48,6 @@
     "@babel/core": "^7.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
-    "@types/luxon": "^3.0.0",
     "@types/mdx": "^2.0.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.0.4",
