--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
     "@mdx-js/react": "^3.0.0",
-    "@next/env": "15.0.1",
+    "@next/env": "^15.0.1",
     "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
     "daisyui": "^4.7.3",
@@ -29,7 +29,7 @@
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
-    "next": "15.0.1",
+    "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
     "next-sitemap": "^4.0.0",
@@ -46,7 +46,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@next/codemod": "^15.0.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
@@ -57,7 +56,7 @@
     "autoprefixer": "^10.4.16",
     "dlx": "^0.2.1",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-mdx": "^3.0.0",
     "eslint-plugin-prettier": "^5.0.0",
