--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "next-sitemap": "^4.0.0",
     "next-themes": "^0.4.3",
     "prop-types": "^15.7.2",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
