Upgrade to nextjs 15 (#136)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@date-fns/tz": "^1.0.2",
     "@heroicons/react": "^2.0.18",
     "@mdx-js/react": "^3.0.0",
-    "@next/env": "^14.0.0",
+    "@next/env": "^15.0.1",
     "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
     "daisyui": "^4.7.3",
@@ -29,14 +29,14 @@
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
     "lodash": "^4.17.21",
-    "next": "^14.0.0",
+    "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
     "next-sitemap": "^4.0.0",
     "next-themes": "^0.4.3",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
@@ -49,13 +49,14 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.0.4",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.16",
+    "dlx": "^0.2.1",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-mdx": "^3.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -66,7 +67,10 @@
     "typescript": "^5.2.2",
     "webpack": "^5.10.0"
   },
-  "resolutions": {},
+  "resolutions": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+  },
   "prettier": {
     "trailingComma": "es5",
     "tabWidth": 2,
