--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "next-sitemap": "^4.0.0",
     "next-themes": "^0.4.3",
     "prop-types": "^15.7.2",
-    "react": "^19.0.0-rc-69d4b800-20241021",
-    "react-dom": "^19.0.0-rc-69d4b800-20241021",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
@@ -49,8 +49,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.16",
