--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-mdx": "^3.0.0",
+    "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "postcss": "^8.4.31",
