--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@next/env": "^15.0.1",
     "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
-    "daisyui": "^4.7.3",
+    "daisyui": "^5.0.0-beta.7",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
