--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "import",
-    "simple-import-sort"
-  ],
+  "plugins": ["import", "simple-import-sort"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -18,28 +15,15 @@
       "error",
       {
         "groups": [
-          [
-            "^\\u0000"
-          ],
+          ["^\\u0000"],
           [
             "^(assert|buffer|child_process|cluster|console|constants|crypto|dgram|dns|domain|events|fs|http|https|module|net|os|path|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|vm|zlib|freelist|v8|process|async_hooks|http2|perf_hooks)(/.*|$)"
           ],
-          [
-            "^@?\\w"
-          ],
-          [
-            "^"
-          ],
-          [
-            "^components(/.*|$)",
-            "^lib(/.*|$)"
-          ],
-          [
-            "contentlayer/generated"
-          ],
-          [
-            "^\\."
-          ]
+          ["^@?\\w"],
+          ["^"],
+          ["^components(/.*|$)", "^lib(/.*|$)"],
+          ["contentlayer/generated"],
+          ["^\\."]
         ]
       }
     ]
