--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next lint --fix && next dev -p 8080",
+    "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
     "postbuild": "next-sitemap",
@@ -24,7 +25,7 @@
     "@next/env": "^15.0.1",
     "@root/walk": "^1.1.0",
     "contentlayer2": "^0.5.0",
-    "daisyui": "^4.7.3",
+    "daisyui": "^5.0.0-beta.7",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
@@ -53,7 +55,6 @@
     "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "autoprefixer": "^10.4.16",
     "dlx": "^0.2.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
@@ -63,14 +64,18 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.5",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.2.2",
     "webpack": "^5.10.0"
   },
   "prettier": {
     "trailingComma": "es5",
     "tabWidth": 2,
-    "semi": true,
+    "semi": false,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ],
     "singleQuote": false
   }
 }
