--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/core": "^7.0.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/react": "^19.0.0",
