--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "isomorphic-unfetch": "^4.0.0",
+    "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
     "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
@@ -49,6 +50,7 @@
     "@babel/core": "^7.0.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/react": "^19.0.0",
