--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
+    "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
     "unified": "^11.0.0",
     "vivus": "^0.4.6"
