--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/rss": "^0.0.32",
@@ -77,6 +78,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "webpack": "^5.10.0"
   },
