--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,6 @@
     "next": "^15.0.1",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
-    "next-sitemap": "^4.0.0",
     "next-themes": "^0.4.5",
     "prop-types": "^15.7.2",
     "react": "^19.0.0",
@@ -42,6 +42,7 @@
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
+    "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
     "unified": "^11.0.0",
     "vivus": "^0.4.6"
@@ -50,11 +51,17 @@
     "@babel/core": "^7.0.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/rss": "^0.0.32",
+    "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "dlx": "^0.2.1",
@@ -64,6 +71,8 @@
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
