--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
