--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "test": "jest"
+    "start": "next start -p $PORT"
   },
   "repository": {
     "type": "git",
@@ -51,10 +50,6 @@
     "@swc/core": "^1.11.11",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/node": "^22.13.10",
@@ -71,8 +66,6 @@
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
