--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf node_modules .next .contentlayer",
     "lint": "next lint --fix",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,8 @@
     "@swc/core": "^1.11.11",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/node": "^22.13.10",
@@ -59,6 +62,7 @@
     "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "dlx": "^0.2.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
@@ -72,6 +76,7 @@
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
+    "vitest": "^3.0.9",
     "webpack": "^5.10.0"
   },
   "prettier": {
