--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9",
     "webpack": "^5.10.0"
   },
