--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
     "@types/node": "^22.13.10",
