--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "next lint --fix",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
@@ -49,21 +48,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@swc/core": "^1.11.11",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/dom": "^10.0.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
-    "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.14.178",
     "@types/mdx": "^2.0.2",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/rss": "^0.0.32",
     "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "dlx": "^0.2.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
@@ -71,13 +71,14 @@
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.9",
     "webpack": "^5.10.0"
   },
   "prettier": {
