--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "daisyui": "^5.0.0-beta.7",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
+    "improved-relative-time": "^1.1.1",
     "isomorphic-unfetch": "^4.0.0",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
