--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@types/mdx": "^2.0.2",
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@types/rss": "^0.0.32",
     "@types/vivus": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -58,6 +57,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
