--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "next lint --fix && next dev -p 8080",
+    "dev": "eslint --fix . && next dev -p 8080",
     "clean": "rm -rf node_modules .next .contentlayer",
-    "lint": "next lint --fix",
+    "lint": "eslint --fix .",
     "build": "next build",
     "start": "next start -p $PORT"
   },
@@ -28,12 +28,12 @@
     "improved-relative-time": "^1.1.1",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
-    "next": "^15.3.0",
+    "next": "^16.0.5",
     "next-contentlayer2": "^0.5.0",
     "next-secure-headers": "^2.1.0",
     "next-themes": "^0.4.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "rehype-slug": "^6.0.0",
     "remark-definition-list": "^2.0.0",
     "remark-gfm": "^4.0.0",
@@ -52,7 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "^16.0.5",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-markdown": "^5.0.0",
